--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.0",
-		"squizlabs/php_codesniffer": "^3.0"
+		"squizlabs/php_codesniffer": "^3.0",
+		"friendsofphp/php-cs-fixer": "^3.2"
 	},
 	"autoload": {
 		"psr-4": {
